<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="@string/app_name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context="com.example.pc.formandstud.MainActivity">


    <EditText
        android:id="@+id/editTextId"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginEnd="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:hint="@string/editTextId"
        android:inputType="number"
        android:maxLength="5"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/btnClearId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginEnd="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:hint="@string/editTextName"
        android:inputType="text"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/btnClearName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextId" />


    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/editTextPhone"
        android:inputType="phone"
        android:maxLength="9"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/btnClearPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />


    <Button
        android:id="@+id/btnAccept"
        android:layout_width="wrap_content"
        android:layout_height="42dp"


        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btnAccept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnClearId"
        android:layout_width="91dp"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/btnClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnClearName"
        android:layout_width="91dp"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/btnClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClearId" />

    <Button
        android:id="@+id/btnClearPhone"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/btnClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClearName" />

    <Button
        android:id="@+id/btnInfo"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="16dp"
        android:text="@string/btnInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnInsertar"
        android:layout_width="140dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/btnInsertar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <Button
        android:id="@+id/btnConsulta"
        android:layout_width="140dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/btnConsulta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInsertar" />


</android.support.constraint.ConstraintLayout>
