<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context="com.example.pc.formandstud.SecondActivity">


    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:hint="@string/telHint"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColorHint="@color/colorRed"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="28dp"
        android:hint="@string/nameHint"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColorHint="@color/colorRed"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_marginBottom="242dp"
        android:layout_marginEnd="125dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="146dp"
        android:gravity="center"
        android:text="@string/textQuestion"
        android:textColor="@color/colorWhite"
        android:background="@color/colorGrey"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPhone" />

    <Button
        android:id="@+id/btnYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="28dp"
        android:text="@string/btnYes"
        app:layout_constraintEnd_toStartOf="@+id/btnNo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuestion" />

    <Button
        android:id="@+id/btnNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="89dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/btnNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnYes"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuestion" />


</android.support.constraint.ConstraintLayout>
